--- a/Project_COC/Project_COC.vcxproj.filters
+++ b/Project_COC/Project_COC.vcxproj.filters
@@ -138,6 +138,12 @@
     <ClCompile Include="WinScene.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="TankArmy.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="TankBullet.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Allegro5Exception.hpp">
@@ -258,6 +264,12 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="WinScene.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="TankArmy.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="TankBullet.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
