--- a/Project_COC/Project_COC.vcxproj.filters
+++ b/Project_COC/Project_COC.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="TankBullet.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="CannonSlow.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Allegro5Exception.hpp">
@@ -270,6 +273,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="TankBullet.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="CannonSlow.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
