--- a/Project_COC/Project_COC.vcxproj
+++ b/Project_COC/Project_COC.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Start_Scene.cpp" />
     <ClCompile Include="TankArmy.cpp" />
     <ClCompile Include="TankBullet.cpp" />
+    <ClCompile Include="Trap.cpp" />
     <ClCompile Include="WallDefense.cpp" />
     <ClCompile Include="WinScene.cpp" />
   </ItemGroup>
@@ -234,6 +235,7 @@
     <ClInclude Include="Start_Scene.hpp" />
     <ClInclude Include="TankArmy.hpp" />
     <ClInclude Include="TankBullet.hpp" />
+    <ClInclude Include="Trap.hpp" />
     <ClInclude Include="ViewController.h" />
     <ClInclude Include="WallDefense.hpp" />
     <ClInclude Include="WinScene.hpp" />
