--- a/Project_COC/Project_COC.vcxproj.filters
+++ b/Project_COC/Project_COC.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="Trap.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="IceSpell.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Allegro5Exception.hpp">
@@ -282,6 +285,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="Trap.hpp">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="IceSpell.hpp">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
